--- a/index.html
+++ b/index.html
@@ -183,17 +183,23 @@
             </div>
             <div class="displayValor">$9/mo</div>
           </div>
-          <div class="displayServiceOpcional">
+          <div class="displayServiceOpcionalUM">
             <div class="displayDetalhesOpc">
-              <p class="tituloDisplayOpc">Larger storage</p>             
+              <p class="tituloDisplayOpcUM"></p>             
             </div>
-            <div class="valorOpc">+$1/mo</div>
+            <div class="valorOpcUM"></div>
           </div>
-          <div class="displayServiceOpcional asd">
+          <div class="displayServiceOpcionalDOIS">
             <div class="displayDetalhesOpc">
-              <p class="tituloDisplayOpc">Customizable profile</p>
+              <p class="tituloDisplayOpcDOIS">No Services Add</p>
             </div>
-            <div class="valorOpc">+$2/mo</div>
+            <div class="valorOpcDOIS"></div>
+          </div>
+          <div class="displayServiceOpcionalTRES asd">
+            <div class="displayDetalhesOpc">
+              <p class="tituloDisplayOpcTRES"></p>
+            </div>
+            <div class="valorOpcTRES"></div>
           </div>
           <div class="resultadoDiv">
             <div class="displayDetalhesResult">
@@ -208,6 +214,17 @@
         </div>
       </div>
       <!-- STEP 4 FINAL -->
+      <!-- STEP FINAL de agradecimento -->
+      <div class="agradecimento">
+        <img src="./assets/images/icon-thank-you.svg" alt="icon-thank-you">
+        <h2>Thank you!</h2>
+        <p>Thanks for confirming your subscription! We hope 
+          you have fun using our platform. If you ever need support, please feel 
+          free to email us at support@loremgaming.com.
+        </p>
+      </div>
+      
+      <!-- STEP FINAL de agradecimento FIM -->
     </div>
   </main>
   
